Add Coinbase meta tag in <head> of index.html

--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Coinbase App Ownership Verification -->
-    <meta
-      name="base:app_id"
-      content="6939c0f3e6be54f5ed71d533"
-    />
+    <!-- Coinbase Verification -->
+    <meta name="base:app_id" content="6939c0f3e6be54f5ed71d533" />
 
-    <title>Sentinel AI – Secure Consultation</title>
+    <title>Sentinel AI Consultation</title>
 
-    <!-- Stripe JS -->
-    <script src="https://js.stripe.com/v3/"></script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3"></script>
   </head>
 
   <body>
